@@ -62,6 +62,12 @@ removed.
 <h2>Changes to existing API:</h2>
 
 <h2>Changed behavior:</h2>
+<ul>
+<li><b>EmuNetDevice uses DIX instead of LLC encapsulation by default</b>
+<p>bug 984 in ns-3 tracker:  real devices don't usually understand LLC/SNAP
+so the default of DIX makes more sense.
+</p>
+</ul>
 
 <hr>
 <h1>Changes from ns-3.8 to ns-3.9</h1>
